--- a/src/App.css
+++ b/src/App.css
@@ -86,12 +86,14 @@ a{
 }
 .dropdown-item:hover{
   background-color: transparent;
-  color: var(--color-febd69) !important;
+  color: #e9a449!important;
+
 }
 .dropdown-item{
   padding: 20px;
   margin-bottom: 3px;
   border-bottom:1px solid var(--color-3b4149);
+  color: var(--color-febd69) !important;
 
 }
 .button{
@@ -295,6 +297,7 @@ border-right:1px solid var(--color-ededed)
   border-radius: 10px;
   overflow: hidden;
   width:100%;
+  /* height: 100%; */
 
   margin: 10px;
 }
@@ -628,6 +631,10 @@ border-right:1px solid var(--color-ededed)
   color:white;
 }
 
+.error{
+  color:red;
+  font-size:12px
+}
 /* auth card ends here */
 
 
